--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,67 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Kanit' sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 a{
     text-decoration: none;
-    color: #000;
+    color: #fff;
+    transition: all 0.3 ease;
 }
-ul,li{
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+
+a:hover{
+    color: #388e3c;
 }
-img{
-    object-fit: cover;
-}
+
 body{
-    background-color: #f1f1f1;
+    background-color: #171717;
+    padding: 20px;
 }
 
+nav{
+    display: flex;
+    gap: 20px;
+}
 
-/* Masuk Navigasi */
+nav .logo-left{
+    height: 65px;
+    width: 65px;
+    background: #18181b;
+    border: 1px solid #27272a;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+nav .logo-left i{
+    color: #388e3c;
+    font-size: 30px;
+}
 
-body .Container{
-    padding: 0 5em;
+nav .link{
+    height: 65px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 5em;
+    width: 100%;
+    padding: 0 70px;
+    background: #18181b;
+    border-radius: 1px solid #27272a;
+    border-radius: 48px;
+    margin-bottom: 80px 0;
 }
 
-body .logo-left {
-    display: flex;
-    font-size: 2em;
-    color: #0f2182;
-    font-weight: 610;
-    align-items: center;
+nav .link a{
+    font-size: 18px;
 }
 
-body .logo-left sub{
-    font-size: 0.4em;
+nav .link a.active{
+    font-weight: bold;
+    color: #388e3c;
 }
 
-body .Ncontainer{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-nav .Ncontainer{
-
-}
