--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,123 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik+Wet+Paint&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
-
 a{
     text-decoration: none;
-    color: #fff;
-    transition: all 0.3 ease;
+    color: #000;
+    font-weight: 600;
 }
-
-a:hover{
-    color: #388e3c;
-}
-
 body{
-    background-color: #171717;
-    padding: 20px;
+    background-color: #f1f1f1;
 }
-
+img{
+    object-fit: cover;
+}
+/* Masuk Navigasi */
 nav{
-    display: flex;
-    gap: 20px;
-}
-
-nav .logo-left{
-    height: 65px;
-    width: 65px;
-    background: #18181b;
-    border: 1px solid #27272a;
-    border-radius: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav .logo-left i{
-    color: #388e3c;
-    font-size: 30px;
-}
-
-nav .link{
-    height: 65px;
+    padding: 0 5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 5em;
+    font-family: 'Playfair Display', sans-serif
+}
+
+nav .logo-left .main-separator{
+    font-size: 2em;
+    color: #0f2182;
+    font-weight: 650;
+}
+
+nav .logo-left .main-separator .sub-1{
+    font-size: 0.4em;
+    color: #cfc4c4;
+}
+
+nav .link a:not(:last-child){
+    margin-right: 3em;
+}
+
+nav .link a:hover{
+    color: darkgreen;
+}
+
+nav .click{
+    display: flex;
+    background-color: #000;
+    border-radius: 17px;
+    gap: 17px;
+    margin-right: 2em;
+}
+nav .click .Get{
+    padding: 0.5em 0.875em;
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    color: #fff;
+    font-weight: 600;
+}
+
+nav .click img{
+    width: 44px;
+    border-radius: 50%;
+    margin: 3px 3px 3px 0;
+    cursor: pointer;
+}
+
+nav .click .Get:hover{
+    color: #000;
+    transition: all 0.3s ease;
+
+}
+nav .click:hover,
+nav .click img:hover{
+    background-color: #0f2182;
+    transition: all 0.3s ease;
+    padding: 5px;
+}
+
+/* Masuk Header */
+header{
     width: 100%;
-    padding: 0 70px;
-    background: #18181b;
-    border-radius: 1px solid #27272a;
-    border-radius: 48px;
-    margin-bottom: 80px 0;
+    height: 5em;
+    justify-content: center;
+    text-align: center;
+    margin: 200px 0;
+    align-items: center;
+    margin-left: 20px;
 }
 
-nav .link a{
-    font-size: 18px;
+header .logo-center .separator{
+    color: #444444;
+    font-size:3em;
+    cursor: pointer;
 }
 
-nav .link a.active{
-    font-weight: bold;
-    color: #388e3c;
+header .logo-center .separator sub{
+    font-size: smaller;
 }
 
+header .logo-center .separator:hover{
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* Masuk Section Materi */
+main .JRcontainer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+section .text-right{
+    align-items: center;
+    margin: 100px 60px;
+}
+
+
+   
+  
