--- a/css/style.css
+++ b/css/style.css
@@ -173,12 +173,12 @@ div .tabs-right{
     box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
 }
 div .tabs-left:hover{
-    background-color: #e6c300;
+    background-color:#0056b3;
     transition: all 0.3s ease;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 div .tabs-right:hover{
-    background-color: #e6c300;
+    background-color:#0056b3;
     transition: 0.3s ease;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
@@ -350,7 +350,7 @@ section .buttom-R{
     padding: 0.5em;
     margin:auto;
     margin-top: -0.2em;
-    box-shadow: 0 -2px 15px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 -2px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.4s ease;
 }
 
@@ -375,6 +375,7 @@ section .buttom-TR th {
     padding: 12px;
     text-align: center;
     background-color: #0f2182;
+    color: #fff;
 }
 
 section .buttom-TR tr:nth-child(even) {
@@ -524,7 +525,8 @@ button.reset:hover {
 
 main section .h-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    flex-direction: column;
     height: 100vh;
     width: 100%;
    align-items: center;
@@ -604,6 +606,7 @@ main section .k-container{
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
+    display: none;
 }
 
 main section .k-container:hover{
@@ -613,15 +616,10 @@ main section .k-container:hover{
 section .content-k{
     text-align: center;
     margin-bottom: 20px;
-    font-size: 28px;
+    font-size: 20px;
     font-family: 'Playfair Display',sans-serif;
 }
 
-section .isi-CM .p-cm{
-    font-size: 20px;
-    font-weight: bold;
-    padding: 10px;
-}
 
 section .btn-group-m{
     margin-top: 35px;
@@ -713,4 +711,35 @@ footer .right .social #Whatsapp:hover{
 footer .right p{
     font-size:13px ;
     color: #777;
+}
+
+/* Donwload */
+
+footer .header-d{
+    color: #777;
+}
+
+footer .logo-google{
+    display: flex;
+    flex-direction: row;
+    color: #999;
+    gap: 10px;
+}
+
+footer .logo-google i{
+    background: linear-gradient(45deg, #DB4437, #F4B400, #0F9D58, #4285F4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    background-clip: text;
+    color: transparent; 
+    align-items: center;
+
+}
+
+footer .logo-ios{
+    display: flex;
+    flex-direction: row;
+    color: #999;
+    gap: 10px;
+    align-items: center;
 }
